Introduce operation representation